--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "read-excel-file": "^5.8.5"
   },
   "devDependencies": {
     "@eslint/js": "8.55.0",
